[gd_scene load_steps=3 format=3 uid="uid://cf14ufgngavb4"]

[ext_resource type="Script" uid="uid://ctiarjuax83xj" path="res://scripts/killzone.gd" id="1_6ib8s"]
[ext_resource type="AudioStream" uid="uid://cdbmjn02kvrje" path="res://assets/death.wav" id="2_i77c3"]

[node name="Killzone" type="Area2D"]
script = ExtResource("1_6ib8s")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_i77c3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
